# app/static/swagger.yaml
@@ -357,6 +357,226 @@ paths:
           examples:
             application/json:
               message: "successfully deleleted mechanic<mechanic_id>"
+  ### Retrieving the best mechanics
+  /mechanics/best:
+    get:
+      tags:
+      - Mechanic
+      summary: "Get the best mechanic"
+      description: "Retrieve the best mechanic list by the number of service tickets"
+      responses:
+        200:
+          descriiption: "Best mechanic retrieved successfully"
+          schema:
+            $ref: "#/definitions/BestMechanics"
+
+
+### Service tickets routes
+### Creating general paths to service tickets routes
+  /service_tickets:
+    post:
+      tags:
+      - ServiceTicket
+      summary: "Create a new service ticket"
+      description: "Create a new service ticket with outlined details"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "service ticket details"
+          required: true
+          schema: 
+            $ref: "#/definitions/CreateServiceTicketPayload"
+      responses:
+        200:
+          description: "service ticket created successfully"
+          schema:
+            $ref: "#/definitions/CreateServiceTicketResponse"
+          examples:
+            application/json:
+              id: 1
+              VIN: "45444XYDDJDJD899"
+              service_date: "2023-1-01"
+              customer_id: 2
+
+    get:
+      tags:
+      - ServiceTicket
+      summary: "Get all service tickets"
+      description: "Retrieve a list of all created service ticket"
+      responses:
+        200:
+          description: "service ticket retrieved successfully"
+          schema:
+            $ref: "#/definitions/AllServiceTickets" 
+  ### Exceptional path to the route of retrieving, updating or deleting specific Service Tickets
+  
+### Edit service tickets
+  /service_tickets/{service_ticket_id}:
+    put:
+      tags:
+      - ServiceTicket
+      summary: "Update an existing service ticket"
+      description: "Edit a service ticket. Token not required"
+      parameters:
+        - name: "service_ticket_id"
+          in: "path"
+          description: "id of the service ticket to update"
+          required: true
+          type: "integer"
+        - in: "body"
+          name: "body"
+          description: "Authentication not required to update service ticket"
+          required: true
+          schema:
+            $ref: "#/definitions/EditServiceTicketPayload"
+      responses:
+        200:
+          description: "service ticket updated successfully"
+          schema:
+            $ref: "#/definitions/EditServiceTicketResponse"
+            examples:
+              application/json:
+                id: 1
+                VIN: "45673323455-ZDDD"
+                service_date: "2023-1-01"
+                customer_id: 2
+      
+### Get specific service ticket
+    get:
+      tags:
+      - ServiceTicket
+      summary: "Retrieve specific service ticket"
+      description: " Retrieve a specific service ticket by its ID"
+      parameters:
+        - name: "service_ticket_id"
+          in: "path"
+          description: "ID of the service ticket to display"
+          required: true
+          schema:
+            $ref: "#/definitions/RetrieveServiceTicketPayload"
+      responses:
+        200:
+          description: "service ticket retrieved successfullly"
+          schema:
+            $ref: "#/definitions/RetrieveServiceTicketResponse"
+            examples:
+              application/json:
+                id: 1
+                VIN: "4543333-D-2343"
+                service_date: "2023-1-01"
+                customer_id: 2
+### Delete a service ticket
+    delete:
+      tags:
+      - ServiceTicket
+      summary: "Delete a service_ticket"
+      description: "Authentication not required"
+      parameters:
+        - name: "service_ticket_id"
+          in: "path"
+          description: "ID of the service_ticket to delete"
+          required: true
+          schema:
+            $ref:"#/definition/DeleteServiceTicketPayload"
+      responses:
+        200:
+          description: "service_ticket deleted successfully"
+          schema:
+            $ref: "#/definitions/DeleteServiceTicketResponse" 
+          examples:
+            application/json:
+              message: "successfully deleleted service_ticket<service_ticket_id>"
+
+### Assign mechanic to a service_ticket
+  /service_tickets/{service_ticket_id}/assign_mechanic/{mechanic_id}:
+    put:
+      tags:
+      - ServiceTicket
+      summary: "Assign a mechanic to a service ticket"
+      description: "Assign a mechanic to a service ticket by their IDS"
+      parameters:
+        - name: "service_ticket_id"
+          in: "path"
+          description: "ID of the service ticket to assign a mechanic to"
+          required: true
+          type: "integer"
+        - name: "mechanic_id"
+          in: "path"
+          description: "ID of the mechanic to assign to the service ticket"
+          required: true
+          type: "integer"
+      responses:
+        200:
+          description: "Mechanic assigned to service ticeket successfully"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                service_ticket_id:
+                  type: "integer"
+                  description: "Service ticket ID"
+                mechanic_id:
+                  type: "integer"
+                  description: "Mechanic ID"
+### Remove mechanic from service_ticket
+  /service_tickets/{service_ticket_id}/remove_mechanic/{mechanic_id}:
+    put:
+      tags:
+      - ServiceTicket
+      summary: "Remove a mechanic from a service ticket"
+      description: "Remove a mechanic froma a service ticket by their IDs"
+      parameters:
+        - name: "service_ticket_id"
+          in: "path"
+          description: "ID of the service ticket to remove from a mechanic"
+          required: true
+          type: "integer"
+        - name: "mechanic_id"
+          in: "path"
+          description: "ID of the service ticket to remove from a mechanic"
+          required: true
+          type: "integer"
+      responses:
+        200:
+          description: "Mechanic removed from service ticket successfully"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                service_ticket_id:
+                  type: "integer"
+                  description: "Service ticket ID"
+                mechanic_id:
+                  type: "integer"
+                  description: "Mechanic ID"
+### Add Inventory to the Service Ticket
+  /service_tickets/{service_ticket_id}/add_inventory:
+    post:
+      tags:
+      - ServiceTicket
+      summary: "Add inventory to a service ticket"
+      description: "Add inventory to a service ticket by their IDS"
+      parameters:
+        - name: "service_ticket_id"
+          in: "path"
+          description: "ID of the service ticket to add inventory to"
+          required: true
+          type: "integer"
+        - in: "body"
+          name: "body"
+          description: "Inventory details to add to the service ticket"
+          required: true
+          schema:
+            $ref: "#/definitions/AddInventoryToServiceTicketPayload"
+      responses:
+        200:
+          description: "Part added to service ticket succcessfully"
+          schema:
+            $ref: "#/definitions/AddInventoryToServiceTicketResponse"
+
+                  
 ### This is where routes are dfined
 ### Customer Definitions
 definitions: 
@@ -505,7 +725,7 @@ definitions:
           type: "string"
         price:
           type: "float"
-  ### Exceptional defintions for updating and deleting inventory
+  ### Exceptional defintions for retrieving, updating and deleting inventory
   RetrieveInventoryPayload:
     type: "object"
     properties:
@@ -599,7 +819,24 @@ definitions:
         type: "string"
       salary: 
         type: "string"
-  ### Exceptional defintions for updating and deleting mechanic
+  BestMechanics:
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+        name:
+          type: "string"
+        email:
+          type: "string"
+        phone:
+          type: "string"
+        salary:
+          type: "string"
+        service_ticket_count:
+          type: "integer"
+  ### Exceptional defintions for retrieving, updating and deleting mechanic
   RetrieveMechanicPayload:
     type: "object"
     properties:
@@ -655,3 +892,173 @@ definitions:
     properties:
         message:
           type: "string"
+### Service Tickets Definitions
+  ## General defininitions for Service Tickets routes
+  CreateServiceTicketPayload:
+    type: "object"
+    properties:
+      VIN:
+        type: "string"
+      service_date:
+        type: "string"
+        format: "date"
+      customer_id: 
+        type: "integer"
+    required:
+      - VIN
+      - service_date
+      - customer_id
+  CreateServiceTicketResponse:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      VIN:
+        type: "string"
+      service_date:
+        type: "string"
+        format: "date"
+      customer_id: 
+        type: "integer"
+
+  AllServiceTickets:
+    type: "array"
+    items:
+      type: "object"
+      properties:
+        id: 
+          type: "integer"
+        VIN:
+          type: "string"
+        service_date:
+          type: "string"
+          format: "date"
+        customer_id: 
+          type: "integer"
+        customer:
+          type: "object"
+          properties:
+            id:
+              type: "integer"
+            name:
+              type: "string"
+            email:
+              type: "string"
+            phone:
+              type: "string"
+            password:
+              type: "string"
+        mechanics:
+          type: "array"
+          items:
+            type: "object"
+            properties:
+              id:
+                type: "integer"
+              name:
+                type: "string"
+              email:
+                type: "string"
+              phone:
+                type: "string"
+              salary:
+                type: "string"
+              
+  ### Exceptional definitions for retrieving, updating and deleting service ticket
+  EditServiceTicketPayload:
+    type: "object"
+    properties:
+      add_mechanic_ids:
+        type: "array"
+        items:
+          type: "integer"
+      remove_mechanic_ids:
+        type: "array"
+        items:
+          type: "integer"   
+    required:
+      - add_mechanic_ids
+      - remove_mechanic_ids
+  EditServiceTicketResponse:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        VIN:
+          type: "string"
+        service_date:
+          type: "string"
+          format: "date"
+        customer_id:
+          type: "integer"
+        mechanics:
+          type: "array"
+          items:
+            type: "object"
+            properties:
+              id:
+                type: "integer"
+              name:
+                type: "string"
+              email:
+                type: "string"
+              phone:
+                type: "string"
+              salary:
+                type: "string"
+  AddInventoryToServiceTicketPayload:
+    type: "object"
+    properties:
+      part_id:
+        type: "integer"
+      quantity:
+        type: "integer"
+    required:
+      - part_id
+      - quantity
+  AddInventoryToServiceTicketResponse:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+      service_ticket_id:
+        type: "integer"
+      part_id:
+        type: "integer"
+  RemoveInventoryFromServiceTicketPayload:
+    type: "object"
+    properties:
+      part_id:
+        type: "integer"
+      quantity:
+        type: "integer"
+    required:
+      - part_id
+      - quantity
+  RemoveInventoryFromServiceTicketResponse:
+    type: "object"
+    properties:
+      message:
+        "type": "string"
+      service_ticket_id:
+        type: "integer"
+      part_id:
+        type: "integer"
+  RetrieveServiceTicketPayload:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      VIN:
+        type: "string"
+      service_date:
+        type: "string"
+        format: "date"
+      customer_id:
+        type: "integer"
+  DeleteServiceTicketPayload:
+    type: "object"
+    properties:
+        message:
+          type: "string"
+    
